force-app/main/default/objects/Overpayment__c/Overpayment__c.object-meta.xml
<CustomObject>
    <label>Overpayment</label>
    <nameField>
        <displayFormat>OP{000000}</displayFormat>
        <label>Overpayment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Overpayments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>