force-app/main/default/objects/Overpayment__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Entity</label>
    <referenceTo>Entity__c</referenceTo>
    <relationshipLabel>Overpayments</relationshipLabel>
    <relationshipName>Overpayments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>