force-app/main/default/objects/Overpayment__c/fields/Intermediate_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Intermediate_Outstanding__c</fullName>
    <label>Intermediate Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>