force-app/main/default/objects/Overpayment__c/fields/Total_Funds_Distributed__c.field-meta.xml
<CustomField>
    <fullName>Total_Funds_Distributed__c</fullName>
    <label>Total Funds Distributed</label>
    <summarizedField>Overpayment_Application__c.Overpayment_Amount__c</summarizedField>
    <summaryForeignKey>Overpayment_Application__c.Overpayment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>