force-app/main/default/objects/Overpayment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Overpayment_Amount__c</columns>
    <columns>Total_Funds_Distributed__c</columns>
    <columns>Outstanding__c</columns>
    <columns>Account_Bill__c</columns>
    <columns>Entity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>